--- a/AppBundle/Resources/views/modifica.html.twig
+++ b/AppBundle/Resources/views/modifica.html.twig
@@ -36,6 +36,7 @@
                         <div class="modal-content alert">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                             <h4>Eliminare operatore 1?</h4>
+                            {{ form_start(form) }}
                             <a role="button" class="btn btn-default deleteButton" href="operatori"><span class="glyphicon glyphicon-trash"></span> Elimina</a>
                         </div>  
                     </div>
@@ -46,16 +47,24 @@
                         <table>
                             <tr>
                                 <td>
-                                    <label for="email">E-mail</label>
-                                    <input type="email" name="email" id="email" value="operatore1@email.it" />
-                                    <label for="password">Password</label>
-                                    <input type="password" name="password" id="password" value="blublublu" />
+                                    {{ form_label(form.Email)}}
+                                    {{ form_widget(form.Email)}}
+                                    {{ form_label(form.Password)}}
+                                    {{ form_widget(form.Password)}}
+                                    <!--<label for="email">E-mail</label>
+                                    <input type="email" name="email" id="email" value="operatore1@email.it" />-->
+                                    <!--<label for="password">Password</label>
+                                    <input type="password" name="password" id="password" value="blublublu" />-->
                                 </td>
                                 <td>
-                                    <label for="name">Nome</label>
+                                    {{ form_label(form.Nome)}}
+                                    {{ form_widget(form.Nome)}}
+                                    {{ form_label(form.Cognome)}}
+                                    {{ form_widget(form.Cognome)}}
+                                    <!--<label for="name">Nome</label>
                                     <input type="text" name="name" id="name" value="Brio" />
                                     <label for="surname">Cognome</label>
-                                    <input type="text" name="surname" id="surname" value="Blu" />
+                                    <input type="text" name="surname" id="surname" value="Blu" />-->
                                 </td>
                             </tr>
                             <tr>
@@ -64,14 +73,17 @@
                                 </td>
                                 <td>
                                     <div>
-                                    Attivo <input class="inLine" type="radio" name="status" id="active" checked/>
-                                    Inattivo <input class="inLine" type="radio" name="status" id="inactive" />
+                                    {{ form_widget(form.Status)}}
+                                    <!--Attivo <input class="inLine" type="radio" name="status" id="active" checked/>
+                                    Inattivo <input class="inLine" type="radio" name="status" id="inactive" />-->
                                     </div>
                                 </td>
                             </tr>
                         </table>
-                        <a role="button" class="btn btn-default saveButton" href="operatori"><span class="glyphicon glyphicon-ok"></span> Salva</a>
+                        {{ form_widget(form.Salva, {'attr': {'class': 'btn btn-default saveButton'}})}}
+                        <!--<a role="button" class="btn btn-default saveButton" href="operatori"><span class="glyphicon glyphicon-ok"></span> Salva</a>-->
                     </form>
+                    {{ form_end(form)}}
                 </div>
             </div>      
         </div>
