--- a/AppBundle/Resources/views/nuovo.html.twig
+++ b/AppBundle/Resources/views/nuovo.html.twig
@@ -37,23 +37,33 @@
                         <table>
                             <tr>
                                 <td>
-                                    <label for="email">E-mail</label>
+                                    {{ form_start(form) }}
+                                    {{ form_label(form.Email)}}
+                                    {{ form_widget(form.Email)}}
+                                    {{ form_label(form.Password)}}
+                                    {{ form_widget(form.Password)}}
+                                    <!--<label for="email">E-mail</label>
                                     <input type="email" name="email" id="email" value="" />
                                     <label for="password">Password</label>
-                                    <input type="password" name="password" id="password" value="" />
+                                    <input type="password" name="password" id="password" value="" />-->
                                 </td>
                                 <td>
-                                    <label for="name">Nome</label>
+                                    {{ form_label(form.Nome)}}
+                                    {{ form_widget(form.Nome)}}
+                                    {{ form_label(form.Cognome)}}
+                                    {{ form_widget(form.Cognome)}}
+                                    <!--<label for="name">Nome</label>
                                     <input type="text" name="name" id="name" value="" />
                                     <label for="surname">Cognome</label>
-                                    <input type="text" name="surname" id="surname" value="" />
+                                    <input type="text" name="surname" id="surname" value="" />-->
                                 </td>
                             </tr>
                             <tr>
                                 <td>
                                     <div>
-                                    Attivo <input class="inLine" type="radio" name="status" id="active" checked/>
-                                    Inattivo <input class="inLine" type="radio" name="status" id="inactive" />
+                                    {{ form_widget(form.Status)}}
+                                    <!--Attivo <input class="inLine" type="radio" name="status" id="active" checked/>
+                                    Inattivo <input class="inLine" type="radio" name="status" id="inactive" />-->
                                     </div>
                                 </td>
                                 <td>
@@ -61,8 +71,10 @@
                                 </td>
                             </tr>
                         </table>
-                        <a role="button" class="btn btn-default saveButton" href="operatori"><span class="glyphicon glyphicon-ok"></span> Salva</a>
+                        {{ form_widget(form.Salva, {'attr': {'class': 'btn btn-default saveButton'}})}}
+                        <!--<a role="button" class="btn btn-default saveButton" href="operatori"><span class="glyphicon glyphicon-ok"></span> Salva</a>-->
                     </form>
+                    {{ form_end(form)}}
                 </div>
             </div>      
         </div>
